// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GeneralInfoSection should render 1`] = `
<div>
  <div
    class="general-info mb-4"
  >
    <div
      class="row g-3"
    >
      <div
        class="col-md-12"
      >
        <div
          class="card card-root h-100 p-2"
        >
          <div
            class="card-title pt-2 px-2 text-uppercase"
          >
            <span
              class="text-4"
            >
              User Profile
            </span>
          </div>
          <div
            class="card-body pb-0 px-2"
          >
            <div
              class="g-2 row"
            >
              <div
                class="name-class align-items-start d-flex mb-2"
              >
                <span
                  class="sticker flex-shrink-0 mr-3 sticker-unstyled sticker-lg"
                >
                  <span
                    class="sticker-overlay"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-user text-secondary"
                      role="presentation"
                    >
                      <use
                        href="#user"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="d-flex flex-column mt-1"
                >
                  <span
                    class="text-3 text-secondary"
                  >
                    Full Name
                  </span>
                  <span
                    class="font-weight-semi-bold text-break text-dark"
                    style="word-break: break-all;"
                  >
                    test
                  </span>
                </div>
              </div>
              <div
                class="email-class align-items-start d-flex mb-2"
              >
                <span
                  class="sticker flex-shrink-0 mr-3 sticker-unstyled sticker-lg"
                >
                  <span
                    class="sticker-overlay"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-mail text-secondary"
                      role="presentation"
                    >
                      <use
                        href="#mail"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="d-flex flex-column mt-1"
                >
                  <span
                    class="text-3 text-secondary"
                  >
                    Email Address
                  </span>
                  <span
                    class="font-weight-semi-bold text-break text-dark"
                    style="word-break: break-all;"
                  >
                    test
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GeneralInfoSection should render multiple sections with their respective items 1`] = `
<div>
  <div
    class="general-info mb-4"
  >
    <div
      class="row g-3"
    >
      <div
        class="section-1-column"
      >
        <div
          class="card card-root h-100 p-2"
        >
          <div
            class="card-title pt-2 px-2 text-uppercase"
          >
            <span
              class="text-4"
            >
              Primary Info
            </span>
          </div>
          <div
            class="card-body pb-0 px-2"
          >
            <div
              class="g-2 row"
            >
              <div
                class="item-1 align-items-start d-flex mb-2"
              >
                <span
                  class="sticker flex-shrink-0 mr-3 sticker-unstyled sticker-lg"
                >
                  <span
                    class="sticker-overlay"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-user text-secondary"
                      role="presentation"
                    >
                      <use
                        href="#user"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="d-flex flex-column mt-1"
                >
                  <span
                    class="text-3 text-secondary"
                  >
                    Name Label
                  </span>
                  <span
                    class="font-weight-semi-bold text-break text-dark"
                    style="word-break: break-all;"
                  >
                    Alice
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="section-2-column"
      >
        <div
          class="card card-root h-100 p-2"
        >
          <div
            class="card-title pt-2 px-2 text-uppercase"
          >
            <span
              class="text-4"
            >
              Secondary Info
            </span>
          </div>
          <div
            class="card-body pb-0 px-2"
          >
            <div
              class="g-2 row"
            >
              <div
                class="item-2 align-items-start d-flex mb-2"
              >
                <span
                  class="sticker flex-shrink-0 mr-3 sticker-unstyled sticker-lg"
                >
                  <span
                    class="sticker-overlay"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-phone text-secondary"
                      role="presentation"
                    >
                      <use
                        href="#phone"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="d-flex flex-column mt-1"
                >
                  <span
                    class="text-3 text-secondary"
                  >
                    Phone Label
                  </span>
                  <span
                    class="font-weight-semi-bold text-break text-dark"
                    style="word-break: break-all;"
                  >
                    555-0123
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
